<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".menu">

    <!-- A CardView 1 Installed -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/installed_image"
                android:src="@drawable/chart"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card1text1"
                android:layout_toEndOf="@+id/installed_image"
                android:layout_alignParentTop="true"
                android:textSize="25sp"
                android:text="@string/card1text1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card1text2"
                android:layout_toEndOf="@+id/installed_image"
                android:layout_below="@+id/card1text1"
                android:text="@string/card1text2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card1text3"
                android:layout_toEndOf="@+id/installed_image"
                android:layout_below="@+id/card1text2"
                android:text="@string/card1text3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/installed_image"
                android:layout_below="@+id/card1text3"
                android:text="@string/card1text4"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!-- A CardView 2 Install -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/install_image"
                android:src="@drawable/plus"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card2text1"
                android:layout_toEndOf="@+id/install_image"
                android:layout_alignParentTop="true"
                android:textSize="25sp"
                android:text="@string/card2text1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card2text2"
                android:layout_toEndOf="@+id/install_image"
                android:layout_below="@+id/card2text1"
                android:text="@string/card2text2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card2text3"
                android:layout_toEndOf="@+id/install_image"
                android:layout_below="@+id/card2text2"
                android:text="@string/card2text3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/install_image"
                android:layout_below="@+id/card2text3"
                android:text="@string/card2text4"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!-- A CardView 3 Reboot -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reboot_image"
                android:src="@drawable/reboot"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card3text1"
                android:layout_toEndOf="@+id/reboot_image"
                android:layout_alignParentTop="true"
                android:text="@string/card3text1"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card3text2"
                android:layout_toEndOf="@+id/reboot_image"
                android:layout_below="@+id/card3text1"
                android:text="@string/card3text2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card3text3"
                android:layout_toEndOf="@+id/reboot_image"
                android:layout_below="@+id/card3text2"
                android:text="@string/card3text3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card3text4"
                android:layout_toEndOf="@+id/reboot_image"
                android:layout_below="@+id/card3text3"
                android:text="@string/card3text4"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slogantv"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/slogan" />


</LinearLayout>

